Added task validation functionality and support for additional web apis: Baselinker and ceneo based xml

--- a/integration/src/main/resources/integration.properties
+++ b/integration/src/main/resources/integration.properties
@@ -1,6 +1,8 @@
-adminUsername=your_admin_username
-adminPassword=your_admin_password
+shoperAdminUsername=your_admin_username
+shoperAdminPassword=your_admin_password
 shoperAuthUri=https://yourshop.pl/webapi/rest/auth
 shoperProductStockUri=https://yourshop.pl/webapi/rest/product-stocks
 shoperAllProductsUri=https://yourshop.pl/webapi/rest/products
+baseLinkerAuthTokenValue=your_auth_token
+baseLinkerRequestUri=https://api.baselinker.com/connector.php
 dummyProductsXmlUri=http://localhost:8080/dummyProductsXml
