--- a/pom.xml
+++ b/pom.xml
@@ -125,15 +125,15 @@
                 <scope>provided</scope>
             </dependency>
             <dependency>
-                <groupId>javax.xml.bind</groupId>
-                <artifactId>jaxb-api</artifactId>
-                <version>2.3.0</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
                 <groupId>commons-beanutils</groupId>
                 <artifactId>commons-beanutils</artifactId>
                 <version>1.9.3</version>
+                <scope>compile</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>3.8.1</version>
                 <scope>compile</scope>
             </dependency>
             <dependency>
@@ -153,6 +153,12 @@
                 <artifactId>durian</artifactId>
                 <version>3.4.0</version>
                 <scope>compile</scope>
+            </dependency>
+            <dependency>
+                <groupId>javax.xml.bind</groupId>
+                <artifactId>jaxb-api</artifactId>
+                <version>2.3.0</version>
+                <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>jaxen</groupId>
