--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.4.RELEASE</version>
+        <version>2.1.3.RELEASE</version>
     </parent>
     <groupId>com.jakubeeee</groupId>
     <artifactId>integrator</artifactId>
@@ -34,15 +34,15 @@
         <start-class>com.jakubeeee.core.Application</start-class>
 
         <maven.version>3.5.4</maven.version>
-        <java.version>10</java.version>
+        <java.version>11</java.version>
         <node.version>v8.11.3</node.version>
         <npm.version>5.6.0</npm.version>
         <project.encoding>UTF-8</project.encoding>
 
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
-        <project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>${encoding}</project.reporting.outputEncoding>
+        <project.build.sourceEncoding>${project.encoding}</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>${project.encoding}</project.reporting.outputEncoding>
 
         <heroku.appname><!-- heroku application name here --></heroku.appname>
         <heroku.artifact.path>target/${project.build.finalName}.${project.packaging}</heroku.artifact.path>
@@ -51,6 +51,7 @@
         </frontend.sources.output.directory>
 
         <frontend.maven.plugin.version>1.6</frontend.maven.plugin.version>
+        <duplicate.finder.maven.plugin.version>1.3.0</duplicate.finder.maven.plugin.version>
         <heroku.maven.plugin.version>2.0.5</heroku.maven.plugin.version>
     </properties>
 
@@ -121,7 +122,7 @@
             <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
-                <version>1.18.2</version>
+                <version>1.18.6</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
@@ -139,13 +140,7 @@
             <dependency>
                 <groupId>org.apache.cxf</groupId>
                 <artifactId>cxf-rt-frontend-jaxws</artifactId>
-                <version>3.2.1</version>
-                <scope>compile</scope>
-            </dependency>
-            <dependency>
-                <groupId>dom4j</groupId>
-                <artifactId>dom4j</artifactId>
-                <version>1.6.1</version>
+                <version>3.3.0</version>
                 <scope>compile</scope>
             </dependency>
             <dependency>
@@ -153,12 +148,6 @@
                 <artifactId>durian</artifactId>
                 <version>3.4.0</version>
                 <scope>compile</scope>
-            </dependency>
-            <dependency>
-                <groupId>javax.xml.bind</groupId>
-                <artifactId>jaxb-api</artifactId>
-                <version>2.3.0</version>
-                <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>jaxen</groupId>
@@ -264,6 +253,28 @@
 
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <configuration>
+                        <annotationProcessorPaths>
+                            <path>
+                                <groupId>org.projectlombok</groupId>
+                                <artifactId>lombok</artifactId>
+                                <version>1.18.6</version>
+                            </path>
+                        </annotationProcessorPaths>
+                    </configuration>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <configuration>
+                        <forkCount>0</forkCount>
+                    </configuration>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-jar-plugin</artifactId>
                     <configuration>
                         <archive>
@@ -279,6 +290,23 @@
                         <archive>
                             <addMavenDescriptor>false</addMavenDescriptor>
                         </archive>
+                    </configuration>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.basepom.maven</groupId>
+                    <artifactId>duplicate-finder-maven-plugin</artifactId>
+                    <version>${duplicate.finder.maven.plugin.version}</version>
+                    <executions>
+                        <execution>
+                            <phase>verify</phase>
+                            <goals>
+                                <goal>check</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <quiet>true</quiet>
                     </configuration>
                 </plugin>
 
@@ -317,6 +345,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.basepom.maven</groupId>
+                <artifactId>duplicate-finder-maven-plugin</artifactId>
             </plugin>
         </plugins>
 
