--- a/tasks/pom.xml
+++ b/tasks/pom.xml
@@ -37,6 +37,10 @@
         </dependency>
 
         <dependency>
+            <groupId>com.diffplug.durian</groupId>
+            <artifactId>durian</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
