--- a/pom.xml
+++ b/pom.xml
@@ -28,12 +28,13 @@
         <module>tasks</module>
         <module>integration</module>
         <module>frontend</module>
+        <module>assembly</module>
     </modules>
 
     <properties>
         <start-class>com.jakubeeee.core.Application</start-class>
 
-        <maven.version>3.5.4</maven.version>
+        <maven.version>3.6.0</maven.version>
         <java.version>11</java.version>
         <node.version>v8.11.3</node.version>
         <npm.version>5.6.0</npm.version>
@@ -47,12 +48,12 @@
         <heroku.appname><!-- heroku application name here --></heroku.appname>
         <heroku.artifact.path>target/${project.build.finalName}.${project.packaging}</heroku.artifact.path>
 
-        <frontend.sources.output.directory>${project.parent.basedir}/core/src/main/resources/public
+        <frontend.sources.output.directory>${project.parent.basedir}/assembly/src/main/resources/public
         </frontend.sources.output.directory>
 
         <frontend.maven.plugin.version>1.6</frontend.maven.plugin.version>
         <duplicate.finder.maven.plugin.version>1.3.0</duplicate.finder.maven.plugin.version>
-        <heroku.maven.plugin.version>2.0.5</heroku.maven.plugin.version>
+        <heroku.maven.plugin.version>2.0.7</heroku.maven.plugin.version>
     </properties>
 
     <profiles>
@@ -89,6 +90,12 @@
         <dependencies>
             <dependency>
                 <groupId>com.jakubeeee</groupId>
+                <artifactId>core</artifactId>
+                <version>1.0</version>
+                <scope>runtime</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.jakubeeee</groupId>
                 <artifactId>common</artifactId>
                 <version>1.0</version>
                 <scope>runtime</scope>
@@ -109,13 +116,6 @@
                 <groupId>com.jakubeeee</groupId>
                 <artifactId>integration</artifactId>
                 <version>1.0</version>
-                <scope>runtime</scope>
-            </dependency>
-            <dependency>
-                <groupId>com.jakubeeee</groupId>
-                <artifactId>frontend</artifactId>
-                <version>1.0</version>
-                <type>pom</type>
                 <scope>runtime</scope>
             </dependency>
 
