--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -14,6 +14,11 @@
     <dependencies>
         <dependency>
             <groupId>com.jakubeeee</groupId>
+            <artifactId>core</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.jakubeeee</groupId>
             <artifactId>common</artifactId>
             <scope>provided</scope>
         </dependency>
