--- a/pom.xml
+++ b/pom.xml
@@ -255,6 +255,7 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <configuration>
+                        <forceJavacCompilerUse>true</forceJavacCompilerUse>
                         <annotationProcessorPaths>
                             <path>
                                 <groupId>org.projectlombok</groupId>
