--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -4,11 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>integrator</artifactId>
+        <artifactId>parent</artifactId>
         <groupId>com.jakubeeee</groupId>
         <version>1.0</version>
     </parent>
     <artifactId>assembly</artifactId>
+    <description>Module responsible for assembling and deploying the final artifact</description>
     <packaging>jar</packaging>
 
     <build>
@@ -19,26 +20,41 @@
         <dependency>
             <groupId>com.jakubeeee</groupId>
             <artifactId>core</artifactId>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>com.jakubeeee</groupId>
             <artifactId>common</artifactId>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>com.jakubeeee</groupId>
             <artifactId>security</artifactId>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>com.jakubeeee</groupId>
             <artifactId>tasks</artifactId>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>com.jakubeeee</groupId>
             <artifactId>integration</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.webjars.npm</groupId>
+            <artifactId>bulma</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>material-design-icons</artifactId>
         </dependency>
     </dependencies>
 
     <profiles>
+
         <profile>
             <id>dev</id>
             <dependencies>
@@ -108,6 +124,7 @@
                 </plugins>
             </build>
         </profile>
+
     </profiles>
 
 </project>
