--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -5,7 +5,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <artifactId>integrator</artifactId>
+    <artifactId>parent</artifactId>
     <groupId>com.jakubeeee</groupId>
     <version>1.0</version>
   </parent>
