--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,20 @@
         <version>2.1.3.RELEASE</version>
     </parent>
     <groupId>com.jakubeeee</groupId>
-    <artifactId>integrator</artifactId>
+    <artifactId>parent</artifactId>
     <version>1.0</version>
-    <name>Online Shop Integrator</name>
-    <description>Simple spring boot + vue.js application for online shop integration with external software
-    </description>
+    <description>Parent module for jakubeeee-integrator application</description>
     <packaging>pom</packaging>
+
+    <developers>
+        <developer>
+            <name>Jakubeeee</name>
+            <url>https://github.com/Jakubeeee</url>
+            <roles>
+                <role>developer</role>
+            </roles>
+        </developer>
+    </developers>
 
     <scm>
         <url>https://github.com/Jakubeeee/online-shop-integration</url>
@@ -92,31 +100,31 @@
                 <groupId>com.jakubeeee</groupId>
                 <artifactId>core</artifactId>
                 <version>1.0</version>
-                <scope>runtime</scope>
+                <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.jakubeeee</groupId>
                 <artifactId>common</artifactId>
                 <version>1.0</version>
-                <scope>runtime</scope>
+                <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.jakubeeee</groupId>
                 <artifactId>security</artifactId>
                 <version>1.0</version>
-                <scope>runtime</scope>
+                <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.jakubeeee</groupId>
                 <artifactId>tasks</artifactId>
                 <version>1.0</version>
-                <scope>runtime</scope>
+                <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.jakubeeee</groupId>
                 <artifactId>integration</artifactId>
                 <version>1.0</version>
-                <scope>runtime</scope>
+                <scope>provided</scope>
             </dependency>
 
             <dependency>
@@ -167,12 +175,11 @@
                 <version>3.0.1</version>
                 <scope>runtime</scope>
             </dependency>
+
         </dependencies>
     </dependencyManagement>
 
     <build>
-        <finalName>${project.artifactId}</finalName>
-
         <pluginManagement>
             <plugins>
 
@@ -182,6 +189,7 @@
                     <inherited>false</inherited>
                     <executions>
                         <execution>
+                            <id>enforce-profiles</id>
                             <goals>
                                 <goal>enforce</goal>
                             </goals>
@@ -212,6 +220,7 @@
                     <version>1.8</version>
                     <executions>
                         <execution>
+                            <id>clean-frontend-output</id>
                             <phase>initialize</phase>
                             <goals>
                                 <goal>run</goal>
@@ -229,13 +238,13 @@
                     <artifactId>maven-resources-plugin</artifactId>
                     <executions>
                         <execution>
+                            <id>copy-frontend-output</id>
                             <phase>generate-resources</phase>
                             <goals>
                                 <goal>copy-resources</goal>
                             </goals>
                             <configuration>
-                                <outputDirectory>${frontend.sources.output.directory}
-                                </outputDirectory>
+                                <outputDirectory>${frontend.sources.output.directory}</outputDirectory>
                                 <overwrite>true</overwrite>
                                 <resources>
                                     <resource>
@@ -300,6 +309,7 @@
                     <version>${duplicate.finder.maven.plugin.version}</version>
                     <executions>
                         <execution>
+                            <id>check-classpath-duplicates</id>
                             <phase>verify</phase>
                             <goals>
                                 <goal>check</goal>
@@ -317,6 +327,7 @@
                     <version>${heroku.maven.plugin.version}</version>
                     <executions>
                         <execution>
+                            <id>deploy-on-heroku</id>
                             <phase>install</phase>
                             <goals>
                                 <goal>deploy</goal>
@@ -354,4 +365,5 @@
         </plugins>
 
     </build>
+
 </project>
