--- a/common/pom.xml
+++ b/common/pom.xml
@@ -9,9 +9,11 @@
         <version>1.0</version>
     </parent>
     <artifactId>common</artifactId>
+    <description>Module containing functionalities common for other modules and not related to spring</description>
     <packaging>jar</packaging>
 
     <dependencies>
+
         <dependency>
             <groupId>com.jakubeeee</groupId>
             <artifactId>testutils</artifactId>
@@ -40,6 +42,17 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.powermock</groupId>
+            <artifactId>powermock-api-mockito2</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.powermock</groupId>
+            <artifactId>powermock-module-junit4</artifactId>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
