--- a/pom.xml
+++ b/pom.xml
@@ -160,6 +160,11 @@
                 <scope>compile</scope>
             </dependency>
             <dependency>
+                <groupId>org.dom4j</groupId>
+                <artifactId>dom4j</artifactId>
+                <version>2.1.1</version>
+            </dependency>
+            <dependency>
                 <groupId>com.diffplug.durian</groupId>
                 <artifactId>durian</artifactId>
                 <version>3.4.0</version>
@@ -182,6 +187,18 @@
                 <artifactId>material-design-icons</artifactId>
                 <version>3.0.1</version>
                 <scope>runtime</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.powermock</groupId>
+                <artifactId>powermock-module-junit4</artifactId>
+                <version>2.0.0</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.powermock</groupId>
+                <artifactId>powermock-api-mockito2</artifactId>
+                <version>2.0.0</version>
+                <scope>test</scope>
             </dependency>
 
         </dependencies>
