--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-# spring profile is set by maven
+### Main spring configuration file common to all profiles ###
+
+## spring profile is set to be equal to maven environment profile ##
 spring.profiles.active=@maven.environment@
 
+## logging levels ##
 logging.level.root=INFO
 logging.level.com.jakubeeee=DEBUG
 logging.level.org.springframework.web=WARN
