--- a/core/src/main/resources/core.properties
+++ b/core/src/main/resources/core.properties
@@ -1,2 +1,6 @@
+### Core's module configuration file ###
+### contains properties related to core functionalities ###
+
+## debugging utilities ##
 enable.method.sequence.monitor=false
 enable.request.logging.interceptor=false
