--- a/core/src/main/resources/application-heroku.properties
+++ b/core/src/main/resources/application-heroku.properties
@@ -1,16 +1,18 @@
-#Spring datasource
+### Spring configuration for heroku profile ###
+
+## spring datasource ##
 spring.datasource.url=${SPRING_DATABASE_URL}
 spring.datasource.username=${SPRING_DATABASE_USERNAME}
 spring.datasource.password=${SPRING_DATABASE_PASSWORD}
 spring.datasource.driverClassName=org.postgresql.Driver
 
-#Spring Data JPA
+## spring data JPA ##
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
-#Spring Mail
+## spring mail ##
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=${SPRING_MAIL_SENDER_USERNAME}
