--- a/core/src/main/resources/application-local.properties
+++ b/core/src/main/resources/application-local.properties
@@ -1,29 +1,31 @@
-#Spring datasource
-spring.datasource.url=jdbc:h2:mem:devDB
+### Spring configuration for local profile ###
+
+## spring datasource ##
+spring.datasource.url=jdbc:h2:mem:local
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 
-#H2 console
+## h2 console ##
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-#Spring Data JPA
+## spring data JPA ##
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create
 
-#Spring Mail
+## spring mail ##
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=yourusername
-spring.mail.password=yourpassword
+spring.mail.username=
+spring.mail.password=
 spring.mail.default-encoding=UTF-8
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-#Spring Actuator
+## spring actuator ##
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 management.info.git.mode=full
