--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.3.RELEASE</version>
+        <version>2.1.4.RELEASE</version>
     </parent>
     <groupId>com.jakubeeee</groupId>
     <artifactId>parent</artifactId>
@@ -82,15 +82,15 @@
 
         <!-- PROFILE GROUP: ENVIRONMENT PROFILES -->
         <profile>
-            <id>dev</id>
+            <id>local</id>
             <properties>
-                <maven.environment>dev</maven.environment>
+                <maven.environment>local</maven.environment>
             </properties>
         </profile>
         <profile>
-            <id>prod</id>
+            <id>heroku</id>
             <properties>
-                <maven.environment>prod</maven.environment>
+                <maven.environment>heroku</maven.environment>
             </properties>
         </profile>
     </profiles>
@@ -229,7 +229,7 @@
                                     <requireProperty>
                                         <property>maven.environment</property>
                                         <message>You must launch maven build with at least one of following profiles:
-                                            dev or prod
+                                            local or heroku
                                         </message>
                                     </requireProperty>
                                 </rules>
