--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
     </modules>
 
     <properties>
-        <start-class>com.jakubeeee.core.Application</start-class>
+        <start-class>com.jakubeeee.Application</start-class>
 
         <maven.version>3.6.0</maven.version>
         <java.version>11</java.version>
