Updated default logging properties

--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -6,10 +6,12 @@ spring.profiles.active=@maven.environment@
 ## logging levels ##
 logging.level.root=INFO
 logging.level.com.jakubeeee=DEBUG
-logging.level.org.springframework.web=WARN
-logging.level.org.springframework.data=WARN
-logging.level.org.hibernate=WARN
+logging.level.org.hibernate=INFO
 logging.level.org.hibernate.sql=WARN
 logging.level.org.hibernate.type=WARN
+logging.level.org.springframework=INFO
+logging.level.org.springframework.beans=WARN
+logging.level.org.springframework.data=WARN
 logging.level.org.springframework.security=WARN
 logging.level.org.springframework.test=WARN
+logging.level.org.springframework.web=WARN
