--- a/core/src/main/resources/application-heroku.properties
+++ b/core/src/main/resources/application-heroku.properties
@@ -8,6 +8,7 @@ spring.datasource.driverClassName=org.postgresql.Driver
 
 ## spring data JPA ##
 spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.show_sql=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
