--- a/core/src/main/resources/application-local.properties
+++ b/core/src/main/resources/application-local.properties
@@ -12,6 +12,7 @@ spring.h2.console.path=/h2-console
 
 ## spring data JPA ##
 spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.show_sql=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create
