--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -12,9 +12,9 @@
     <description>Module responsible for assembling and deploying the final artifact</description>
     <packaging>jar</packaging>
 
-    <build>
-        <finalName>${project.parent.artifactId}</finalName>
-    </build>
+    <properties>
+        <start-class>com.jakubeeee.Application</start-class>
+    </properties>
 
     <dependencies>
         <dependency>
@@ -52,6 +52,10 @@
             <artifactId>material-design-icons</artifactId>
         </dependency>
     </dependencies>
+
+    <build>
+        <finalName>${project.parent.artifactId}</finalName>
+    </build>
 
     <profiles>
 
