--- a/pom.xml
+++ b/pom.xml
@@ -168,6 +168,12 @@
                 <version>2.0.2</version>
                 <scope>test</scope>
             </dependency>
+            <dependency>
+                <groupId>org.testcontainers</groupId>
+                <artifactId>testcontainers-merged</artifactId>
+                <version>1.12.0</version>
+                <scope>test</scope>
+            </dependency>
 
         </dependencies>
     </dependencyManagement>
