--- a/testutils/pom.xml
+++ b/testutils/pom.xml
@@ -32,6 +32,11 @@
             <artifactId>javax.persistence-api</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers-merged</artifactId>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>provided</scope>
