Created new testcore module and moved the CustomPostgreSQL12Container there

--- a/pom.xml
+++ b/pom.xml
@@ -31,8 +31,9 @@
 
     <modules>
         <module>testutils</module>
-        <module>core</module>
         <module>common</module>
+        <module>testcore</module>
+        <module>core</module>
         <module>security</module>
         <module>tasks</module>
         <module>integration</module>
@@ -69,6 +70,12 @@
             <dependency>
                 <groupId>com.jakubeeee</groupId>
                 <artifactId>testutils</artifactId>
+                <version>1.0</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.jakubeeee</groupId>
+                <artifactId>testcore</artifactId>
                 <version>1.0</version>
                 <scope>test</scope>
             </dependency>
