--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,12 @@
                 <scope>compile</scope>
             </dependency>
             <dependency>
+                <groupId>org.codehaus.groovy</groupId>
+                <artifactId>groovy</artifactId>
+                <version>2.5.7</version>
+                <scope>compile</scope>
+            </dependency>
+            <dependency>
                 <groupId>jaxen</groupId>
                 <artifactId>jaxen</artifactId>
                 <version>1.2.0</version>
@@ -173,6 +179,12 @@
                 <groupId>org.powermock</groupId>
                 <artifactId>powermock-api-mockito2</artifactId>
                 <version>2.0.2</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.testcontainers</groupId>
+                <artifactId>database-commons</artifactId>
+                <version>1.12.0</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
