--- a/pom.xml
+++ b/pom.xml
@@ -194,6 +194,12 @@
                 <scope>test</scope>
             </dependency>
             <dependency>
+                <groupId>com.icegreen</groupId>
+                <artifactId>greenmail-spring</artifactId>
+                <version>1.5.7</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
                 <groupId>com.github.springtestdbunit</groupId>
                 <artifactId>spring-test-dbunit</artifactId>
                 <version>1.3.0</version>
