--- a/testcore/src/main/resources/application-integrationtest.properties
+++ b/testcore/src/main/resources/application-integrationtest.properties
@@ -15,10 +15,10 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.hibernate.ddl-auto=update
 
 ## spring mail ##
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=unsupported
-spring.mail.password=unsupported
+spring.mail.host=localhost
+spring.mail.port=3025
+spring.mail.username=integrationtest@mail.com
+spring.mail.password=password
 spring.mail.default-encoding=UTF-8
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
