Changed testcore maven configuration to provide modules which depend on testcore with dbunit artifacts

--- a/testcore/pom.xml
+++ b/testcore/pom.xml
@@ -69,7 +69,12 @@
         <dependency>
             <groupId>com.github.springtestdbunit</groupId>
             <artifactId>spring-test-dbunit</artifactId>
-            <scope>provided</scope>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.dbunit</groupId>
+            <artifactId>dbunit</artifactId>
+            <scope>runtime</scope>
         </dependency>
 
     </dependencies>
