Replaced deprecated tasks antrun plugin parameter with target

--- a/pom.xml
+++ b/pom.xml
@@ -262,9 +262,9 @@
                                 <goal>run</goal>
                             </goals>
                             <configuration>
-                                <tasks>
+                                <target>
                                     <delete dir="src\main\resources\public" includeemptydirs="true"/>
-                                </tasks>
+                                </target>
                             </configuration>
                         </execution>
                     </executions>
